--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently a compensation analyst pursuing a carrer in software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Atlanta, GA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy gaming, hanging with my doggo, and not having plans.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To help people Mr. Beast style.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>In a condo in Buckhead</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>So I can enjoy what I do again.</p>
     </section>
 
     <footer id="footer">
